# base_microservice

./: pyproject.toml
app/: app.py
app/core/: __init__.py  security.py  settings.py
app/db/: __init__.py  psql.py  redis.py
app/repositories/: __init__.py  base_repository.py
